feat: add action list api
