# infrastructure/schemas/openapi/admin/openapi.yaml
@@ -11,6 +11,7 @@ tags:
   - name: hearingMessages
   - name: events
   - name: reports
+  - name: actions
 
 paths:
   /api/documents/{documentId}:
@@ -313,6 +314,30 @@ paths:
         "500":
           $ref: "#/components/responses/Error"
 
+  /api/actions/{problemId}:
+    get:
+      tags:
+        - actions
+      summary: "List actions by problem id"
+      operationId: "ListActions"
+      security:
+        - BearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/ProblemIdPathParameter"
+      responses:
+        "200":
+          $ref: "#/components/responses/ListActionsSuccess"
+        "400":
+          $ref: "#/components/responses/Error"
+        "401":
+          $ref: "#/components/responses/Error"
+        "403":
+          $ref: "#/components/responses/Error"
+        "404":
+          $ref: "#/components/responses/Error"
+        "500":
+          $ref: "#/components/responses/Error"
+
 components:
   securitySchemes:
     BearerAuth:
@@ -519,6 +544,33 @@ components:
         - content
         - createdAt
 
+    Action:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        problemId:
+          type: string
+          format: uuid
+        actionType:
+          type: string
+          $ref: "#/components/schemas/actionType"
+        input:
+          type: string
+        output:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+      required:
+        - id
+        - problemId
+        - actionType
+        - input
+        - output
+        - createdAt
+
   parameters:
     DocumentIdPathParameter:
       name: documentId
@@ -718,3 +770,17 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Report"
+
+    ListActionsSuccess:
+      description: "List actions response"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              actions:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Action"
+            required:
+              - actions
